updated readme and license

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Reference Image Sidebar",
   "id": "ref_sidebar",
   "author": "Chiran Arumugam",
-  "description": "Upload reference images per deck, view them in a zoomable sidebar while reviewing.",
+  "description": "Upload reference images per deck, view them in a sidebar while reviewing.",
   "version": "0.9.0",
   "min_point_version": 24,
   "max_point_version": 24,
