readme updated, gifs made and updated for usage information.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Reference Image Sidebar",
-  "package": "reference_sidebar",
+  "package": "919446148",
   "author": "Chiran Arumugam",
   "description": "Upload reference images per deck and view them in a sidebar while reviewing.",
   "version": "0.9.0",
